# short-term-strategy-discovery

./: .gitignore  .hermes.md  .pre-commit-config.yaml  AGENTS.md  README.md  data_audit.md  playbook_research_objective.md  project_plan.md  pyproject.toml  repo_hygiene_a_plan.md  requirements-dev.lock.txt  requirements-dev.txt  requirements.lock.txt  requirements.txt  research_status_summary.md
docs/: conditional_specialist_framework_h.md  databento_data_handoff_report.md  databento_recent_download_20260403_20260703.md  hybrid_ml_llm_trading_architecture.md  ml_calibration_drift_policy_audit_a.md  phase10b_causality_quarantine_and_ml_baseline_b.md  tooling_foundation_a.md
outputs/: framework_audit_b_activity_summary.csv  framework_audit_b_gate_sensitivity.csv  framework_audit_c_candidate_selection.csv  framework_audit_c_daily_bootstrap_summary.csv  framework_audit_c_family_comparison.csv  framework_audit_c_gate_probability_summary.csv  framework_audit_c_trade_bootstrap_summary.csv  framework_audit_c_weekly_block_bootstrap_summary.csv  module_pruning_audit_a_module_diagnostics.csv  module_pruning_audit_a_overlap_summary.csv  module_pruning_audit_a_pruning_variants.csv  module_pruning_audit_a_walk_forward_folds.csv  phase10a_candidate_results.csv  phase10a_concentration_diagnostics.csv  phase10a_daily_pnl.csv  phase10a_exit_reason_summary.csv  phase10a_next_action_recommendation.json  phase10a_range_regime_summary.csv  phase10a_trade_logs.csv  phase10a_walk_forward_folds.csv  phase10b_candidate_results.csv  phase10b_concentration_diagnostics.csv  phase10b_daily_pnl.csv  (+215 more)
(+765 files in other folders)
