[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "short-term-strategy-discovery"
version = "0.1.0"
description = "Research-only deterministic intraday futures strategy and bounded ML/LLM framework"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "databento>=0.80",
  "duckdb>=1.5",
  "joblib>=1.4",
  "matplotlib>=3.9",
  "numpy>=2.0",
  "pandas>=2.2",
  "pandera[pandas]>=0.32",
  "pyarrow>=15",
  "scikit-learn>=1.9",
  "scipy>=1.17",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.156",
  "pre-commit>=4.6",
  "ruff>=0.15",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 160
extend-exclude = ["artifacts", "outputs", "reports", "data", ".venv"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E701", "E702"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
"tests/*.py" = ["E402"]
